--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,12 @@
-body {
+* {
+    margin:0;
+    padding: 0
+}
+    body {
     /* more on this crazy alphanumerical balue in a minute! */
     color: #39a6b2;
     font-family: Arial, Helvetica, sans-serif;
+    padding:20px 35px;
 }
 
 /* apply styles to <header> */
@@ -14,4 +19,37 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    display: inline;
+}
+header a {
+    text-decoration: none;
+    color: #fce138;
+}
+header nav {
+    float: right;
+    margin: 7px 0;
+}
+header nav ul li {
+    display: inline;
+    font-size: 15px;
+    
+}
+footer {
+    background: #fce138;
+    width: 100%;
+    padding: 40px 35px;
+}
+footer h2 {
+    display: inline;
+    color: #024e76;
+    font-size: 30px;
+    margin: 0;
+}
+footer div {
+    float: right;
+    line-height: 1.5;
+    text-align: right;
+}
+footer a {
+    color: #024e76
 }
