--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 * {
     margin:0;
-    padding: 0
+    padding: 0;
+    box-sizing: border-box;
 }
     body {
     /* more on this crazy alphanumerical balue in a minute! */
@@ -13,6 +14,7 @@
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
+    width: 100%
 }
 header h1 {
     font-weight: bold;
@@ -32,7 +34,7 @@ header nav {
 header nav ul li {
     display: inline;
     font-size: 15px;
-    
+    padding: 5px 10px;
 }
 footer {
     background: #fce138;
