--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-    body {
+body {
     /* more on this crazy alphanumerical balue in a minute! */
     color: #39a6b2;
     font-family: Arial, Helvetica, sans-serif;
@@ -18,6 +18,7 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    flex-direction: row;
 }
 header h1 {
     font-weight: bold;
@@ -30,26 +31,34 @@ header a {
     color: #fce138;
 }
 header nav {
-    margin: 7px 0;
+    margin: 7px 0; 
 }
-header nav ul li {
-    display: inline;
-    font-size: 15px;
-    padding: 5px 10px;
+header nav ul {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+header nav ul li a {
+    margin: 0 30px;
+    font-weight: lighter;
+    font-size: 1.55vw;
 }
 footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -62,23 +71,34 @@ section {
     /* Hero Style Start */
 .hero {
     background-image: url(https://static.fullstack-bootcamp.com/module-2/flipped-hero-image.jpg);
-    height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-/* Hero Style End */
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+}
 .hero-form {
     color: #024e76;
     background-color: #fce138;
     padding: 20px;
-    width: 500px;
     border-style: solid;
     border-width: 3px;
     border-color: #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
+    width: 40%;
+    margin: 3.5%;
 }
 .hero-form h3 { 
     font-size: 25px;
@@ -106,27 +126,26 @@ section {
     font-size: 16px;
 }
 /* HERO STYLES END */
-.intro {
-    text-align: center;
-}
+
 .intro p{
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 .steps {
-    text-align: center;
     background: #fce138;
 }
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 .primary-border {
     border-color: #fce138;
@@ -154,7 +173,6 @@ section {
     font-size: 38px;
 }
 .trainers {
-    text-align: center;
 }
 .trainer {
     width: 900px;
@@ -198,7 +216,6 @@ section {
 }
 /*REACH OUT STYLES START*/
 .contact {
-    text-align: center;
     background: #024e76;
 }
 .contact h2 {
@@ -227,3 +244,7 @@ section {
     color: #fce138
 }
 /*REACH OUT STYLES END */
+
+.flex-row {
+    display: flex;
+}
