--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -189,9 +189,6 @@ section {
     font-size: 26px;
     line-height: 1.5px;
     color: #024e76;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
 }
 .step-img {
     flex: 1 12%;
@@ -200,44 +197,41 @@ section {
 .step-img img {
     max-width: 100%;
 }
+.trainers {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
 .trainer {
-    width: 900px;
-    margin: 0 auto 30px auto;
+    margin: 20px;
     background: #024e76;
     color: #fce138;
-    overflow: auto;
+    flex: 1;
 }
 .trainer img {
-    width: 35%;
-    float:left;
+    width: 100%;
     overflow: auto;
-}
-.trainer-bio {
-    padding: 35px;
-    float: left;
-    width: 65%;
-    overflow: auto;
-}
-.text-left {
-    text-align: left;
-}
-.text-right {
-    text-align: right;
 }
 .trainer-bio {
     font-size: 32px;
     margin-bottom: 8px;
-    overflow: auto;
+    overflow: auto; 
+    font-size: 17px;
+    padding: 25px;
+    line-height: 1.3;   
+}
+.trainer-bio h3 {
+    font-size: 28px;
 }
 .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 26px;
-    margin-bottom: 25px;
+    font-size: 22px;
+    margin-bottom: 15px;
     overflow: auto;
 }
-.trainer-bio p {
-    font-size: 17px;
-    line-height: 1.3;
+.trainer-bio p {                                       
     overflow: auto;
 }
 /*REACH OUT STYLES START*/
@@ -247,30 +241,57 @@ section {
 .contact h2 {
     color: #fce138
 }
+.contact-info{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.contact-info > * {
+    flex: 1;
+    margin: 15px;
+}
 .contact-info iframe {
-    width: 400px;
     height: 400px;
     display: inline-block;
 }
 .contact-info div {
-    width: 410px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 30px 0 0 60px;
     color: white;
 }
 .contact-info p, .contact-info address {
     margin:20px 0;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
 }
-.contact-info a {
+.contact-info address {
     color: #fce138
+}
+.contact-form input, .contact-form textarea {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+}
+.contact-form button {
+    width: 100%;
+    border: none;
+    background: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
 }
 /*REACH OUT STYLES END */
 
 .flex-row {
     display: flex;
+    justify-content: space-between;
+}
+.flex-row h2 {
+    display: flex;
+   
 }
