--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,10 +32,17 @@ header a {
 header nav {
     margin: 7px 0;
 }
-header nav ul li {
-    display: inline;
-    font-size: 15px;
-    padding: 5px 10px;
+header nav ul {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: spsace-between;
+    align-items: center;
+    list-style: none;
+}
+header nav ul li a {
+    margin: 0 30px;
+    font-weight: lighter;
+    font-size: 1.5vw;
 }
 footer {
     background: #fce138;
