--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -126,27 +126,26 @@ section {
     font-size: 16px;
 }
 /* HERO STYLES END */
-.intro {
-    text-align: center;
-}
+
 .intro p{
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 .steps {
-    text-align: center;
     background: #fce138;
 }
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 .primary-border {
     border-color: #fce138;
@@ -174,7 +173,7 @@ section {
     font-size: 38px;
 }
 .trainers {
-    text-align: center;
+  
 }
 .trainer {
     width: 900px;
@@ -218,7 +217,6 @@ section {
 }
 /*REACH OUT STYLES START*/
 .contact {
-    text-align: center;
     background: #024e76;
 }
 .contact h2 {
@@ -247,3 +245,6 @@ section {
     color: #fce138
 }
 /*REACH OUT STYLES END */
+.flex-row {
+    display: flex;
+}
