--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -181,7 +181,7 @@ section {
     flex-wrap: wrap;
     align-items: center;
 }
-.step img {
+.step-img {
     flex: 1 12%;
     margin-right: 20px;
 }
