--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -86,7 +86,6 @@ section {
     border-color: #024e76;
     width: 40%;
     margin: 3.5%;
-    justify-content: right;
 }
 .hero-form h3 { 
     font-size: 25px;
@@ -127,27 +126,25 @@ section {
     color: #fce138
 }
 /* HERO STYLES END */
-.intro {
-    text-align: center;
-}
 .intro p{
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 .steps {
-    text-align: center;
     background: #fce138;
 }
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 .primary-border {
     border-color: #fce138;
@@ -174,8 +171,8 @@ section {
 .steps span {
     font-size: 38px;
 }
-.trainers {
-    text-align: center;
+.trainers{
+
 }
 .trainer {
     width: 900px;
@@ -219,7 +216,6 @@ section {
 }
 /*REACH OUT STYLES START*/
 .contact {
-    text-align: center;
     background: #024e76;
 }
 .contact h2 {
@@ -248,3 +244,6 @@ section {
     color: #fce138
 }
 /*REACH OUT STYLES END */
+.flex-row {
+    display: flex;
+}
